@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.afl-video" name="AFL Video" version="0.8" provider-name="Andy Botting">
+<addon id="plugin.video.afl-video" name="AFL Video" version="1.0" provider-name="Andy Botting">
    <requires>
       <import addon="xbmc.python" version="1.0"/>
       <import addon="script.module.beautifulsoup"/>
